--- a/index.html
+++ b/index.html
@@ -1,82 +1,79 @@
 <!DOCTYPE html>
-<html>
-    <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Susthargyi</title>
-    <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-  </head>
-  <body class="a">
-      <br />
-    <h2 class="b">welcome to susthargyi</h2>
-<br />
-<tr>
-  <br />
-  <div class="c">
-  <td>susthargyi info
-  <a href="info.html">click here</a></td>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Myanmar_Youtuber_sub_count</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="./style.css">
+<style type="text/css" media="all">
+    html {
+        scroll-behavior: smooth;
+    }
+</style>
+</head>
+<script type="text/javascript" charset="utf-8">
+    function myFunction(co) {
+        alert("comming soon");
+}
+</script>
+<body>
+<section class="navigation">
+  <div class="nav-container">
+    <div class="brand">
+      <a href="#!">subs count</a>
+    </div>
+    <nav>
+  <div class="nav-mobile">
+    <a id="nav-toggle" href="#!"><span></span></a>
   </div>
-  <br />
-  <br />
-  <br />
-  <br />
-  <div class="c">
-  <td>susthargyi revolution: 
-  <a href="revo.html">click here</a></td>
+  <ul class="nav-list">
+    <li><a onclick="myFunction()" href="#!">about me</a></li>
+    <li><a href="#youtuberlist">youtuber list</a></li>
+    <li><a onclick="myfunction()" href="#!">Contact</a></li>
+  </ul>
+</nav>
+    </div>
+</section>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+  
+  <br /><br />
+  <div class="div1">
+      <h1 class="header1">Welcome <br /><br /> from myanmar youtuber sub count website</h1>
   </div>
-    <br />
-  <br />
-  <br />
-  <br />
-  <div class="c">
-  <td>susthargyi (admins): 
-  <a href="admin.html">click here</a></td>
-  </div>
-    <br />
-  <br />
-  <br />
-  <br />
-  <div class="c">
-  <td>want to donate pdf: 
-  <a href="pdf.html">click here</a></td>
-  </div>
-  <br />
-  <br />
-  <br />
-  <br />
-  <div class="c">
-  <td>susthargyi ban keyworld
-  <li>nazi</li>
-  <li>hitler</li>
-  <li>nigga</li>
-  </td>
-  </div>
-</tr>
-<br />
-<br />
-<br />
-<br />
-<div class="d">
-    <td><p class="h">susthargyi gp</p>
-    <a href="https://www.facebook.com/groups/892855221644408/?ref=share"><p class="a">click here to join</p></a></td>
+
+<div class="div2">
+    <img class="img1" src="https://c.tenor.com/7SlCLFAyUSEAAAAC/among-us-distraction-dance.gif" alt="" />
+    <h4 class="dis">Here u can watch myanmar famous youtuber sub count live(real time)</h4>
+    <div class="hid">
+        <h1 class="">Welcome <br /><br /> from myanmar youtuber sub count website</h1>
+        <h4>Here u can watch myanmar famous youtuber sub count live(real time)</h4> 
+
+    </div>
 </div>
-<br />
-<br />
-<br />
-<br />
-<div class="d"
-<p>create by <a href="https://www.facebook.com/wadu.hak.10">kho sai</a></p>
-<p>publish by <a href="https://www.facebook.com/kaungkhant.zaw.3110">kho kaung</a></p>
-</div>
-<br />
-<br />
-<br />
-<br />
-<marquee class="d"behavior="loop" direction="ltr">Yo mama is fat</marquee>
-<br />
-<br />
-<br />
-  </body>
+
+
+<br /><br /><br /><br /><br />
+        <div class="div3">
+            <iframe id="youtuberlist"  height="120px" width="100%" frameborder="" src="https://socialcounts.org/youtube-live-subscriber-count/UCXOYRSr-gh9JYwU8GRN6t6g/embed" allowFullScreen></iframe>
+            <br /><br /><br />
+            <iframe height="120px" width="100%" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UClrZjL1hXo7St62u-p4Ue4A/embed" allowFullScreen></iframe>
+            <br  /><br /><br />
+            <iframe height="120px" width="100%" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCu24vkycONcfyrexGxTZo7g/embed" allowFullScreen></iframe>
+            <br /><br /><br />
+            <iframe height="120px" width="100%" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCpUSbGRUpZrtc5djClA2Dxg/embed" allowFullScreen></iframe>
+            <br /><br /><br />
+            <iframe height="120px" width="100%" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCS8lLhCMScWNUINJHIenx1w/embed" allowFullScreen></iframe>
+            <br /><br /><br />
+            <iframe height="120px" width="100%" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCO6nO5gAoLsVXEiMq9ZeK-g/embed" allowFullScreen></iframe>
+            <br /><br /><br />
+            <iframe height="120px" width="100%" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCNv_CXZPz1OtMFzfjjIM4KA/embed" allowFullScreen></iframe>
+        </div>
+        <br /><br /><br /><br /><br /><br /><br /><br />
+        
+        <div class="copyright">
+            <h5 class="Copy">2022 copy right goes to owner</h5>
+        </div>
+</body>
 </html>
